Atuaçizações de DB - Sem verificação específica